Update 4. Making API Requests with Python.md

--- a/APIs for Beginners/4. Making API Requests with Python.md
+++ b/APIs for Beginners/4. Making API Requests with Python.md
@@ -36,9 +36,22 @@ It is a library that provides easy access to all "HTTP verbs" or "Request Method
     query_params = {'floor':77, 'elevator':True}
     response1 = request.get('https://350.5th-ave.com/unit/243', params = query_params)
     url = response1.url
-    response2 = request.post('https://350.5th-ave.com/unit/243', data = {"Key": "value"})
-    response3 = request.push('https://350.5th-ave.com/unit/243', data = {"Key": "value"})
+    ----------------------------------------------------------------------------------------------------------------
+    response2 = request.post('https://350.5th-ave.com/unit/243', data = {"Key": "value"}, headers={"Key": "value"})
+    response2.headers['content-type']
+    ----------------------------------------------------------------------------------------------------------------
+    response3 = request.push('https://350.5th-ave.com/unit/243', data = {"Key": "value"}, headers={"Key": "value"})
+    response3.headers.get('content-type')
+    ----------------------------------------------------------------------------------------------------------------
+    # Check if the response.status_code is equal to the requests.codes value for "200 OK"
+    if response.status_code == requests.codes.ok:
+      print('The server responded succesfully!')
+    ----------------------------------------------------------------------------------------------------------------
+    # Or if the request was not successful because the API did not exist
+    elif (response.status_code == 404):
+      print('Oops, that API could not be found!')
 
 ### Notes:
 * `params` in the `get` method is optional.
 * `data` in the `post` and the `push` methods is the data passed to the query itself, which is necessary in these cases.
+* Each request method accepts an optional `headers` parameter, which is a dictionary for headers data.
