--- a/APIs for Beginners/1. Introduction to APIs.md
+++ b/APIs for Beginners/1. Introduction to APIs.md
@@ -45,9 +45,13 @@ One of the problems APIs solve is that servers send `HTML` responses. While `HTM
 
 ## VI. Authorization (Auth):
 APIs user authorization (auth) to ensure that clients' requests access data securely. This can involve authenticating the sender of the request and ensuring they have permission to access or manipulate relevant data. Three commonly used methods are:
-1. `Basic Auth` requires sending a verified username and password.
-2. `Oauth` requires sending a granted access token with the request, which is useful when multiple applications need access.
-3. `API Key` requires sending a secret key-value pair in the request header or query parameters.
+1. `Basic Auth` requires sending a verified username and password. [The easiest and the least secure]
+
+   ![image](https://github.com/Sir-Elite/My-Summaries/assets/66035383/a4e96d72-1c60-49ff-b381-6afee8ea3914)
+   
+3. `Oauth 2.0` requires sending a granted access token with the request, which is useful when multiple applications need access. [most secure and complex]
+4. `API Key/token Authentication` requires sending a secret key-value pair in the request header or query parameters. [simple to implement but pose a security risk if compromised]
+5. `JWT` its token has a limited lifespan and can contain additional encrypted data, such as user information. [more secure than API Key, but not as simple]
 
 ### Notes:
 * If you are integrating a third-party API, the API documentation will specify the required authentication in exact format.
