Authentication Code Examples

--- a/APIs for Beginners/4. Making API Requests with Python.md
+++ b/APIs for Beginners/4. Making API Requests with Python.md
@@ -33,16 +33,17 @@ they are two well-known Python libraries for integrating web APIs, such that:
 It is a library that provides easy access to all "HTTP verbs" or "Request Methods".
 
 ### Requests examples:
+#### Example 1 - GET Request:
     query_params = {'floor':77, 'elevator':True}
     response1 = request.get('https://350.5th-ave.com/unit/243', params = query_params)
     url = response1.url
-    ----------------------------------------------------------------------------------------------------------------
+#### Example 2 - POST Request:
     response2 = request.post('https://350.5th-ave.com/unit/243', data = {"Key": "value"}, headers={"Key": "value"})
     response2.headers['content-type']
-    ----------------------------------------------------------------------------------------------------------------
+#### Example 3 - PUSH Request:
     response3 = request.push('https://350.5th-ave.com/unit/243', data = {"Key": "value"}, headers={"Key": "value"})
     response3.headers.get('content-type')
-    ----------------------------------------------------------------------------------------------------------------
+#### Example 4 - Check on response status code:
     # Check if the response.status_code is equal to the requests.codes value for "200 OK"
     if response.status_code == requests.codes.ok:
       print('The server responded succesfully!')
@@ -50,6 +51,17 @@ It is a library that provides easy access to all "HTTP verbs" or "Request Method
     # Or if the request was not successful because the API did not exist
     elif (response.status_code == 404):
       print('Oops, that API could not be found!')
+#### Example 5 - Adding Basic Authentication Header
+    # This will automatically add a basic authentication header before sending a request
+    request.get('https://api.music-catalog.com', auth = ('username','password'))
+#### Example 6 - Adding API Key/Token Authentication:
+##### 6.1 Using a query parameter:
+    params = {'access_token': 'faaa1c97bd3f4bd9b024c708c979feca'}
+    request.get('https://api.music-catalog.com', params = params)
+##### 6.2 Using the "Bearer" autherization header (preferable):
+    headers =  {'Authorization': 'Bearer faaa1c97bd3f4bd9b024c708c979feca'}
+    request.get('https://api.music-catalog.com', headers = headers)
+
 
 ### Notes:
 * `params` in the `get` method is optional.
