--- a/APIs for Beginners/1. Introduction to APIs.md
+++ b/APIs for Beginners/1. Introduction to APIs.md
@@ -75,7 +75,7 @@ They are self-contained tokens used for authorization. They are, essentially, JS
 We can access the value of a defined variable using double curly brace syntax: `{{variableName}}`
 
 ## IX. JSON vs XML:
-| JSON                                | XML                                                |
+| JSON (JavaScript Object Notation)   | XML                                                |
 | ----------------------------------- | -------------------------------------------------- |
 | Simple Syntax                       | Complex Syntax                                     |
 | Faster Parsing & Transmission       | Slower Parsing & Transmission                      |
