--- a/APIs for Beginners/4. Making API Requests with Python.md
+++ b/APIs for Beginners/4. Making API Requests with Python.md
@@ -51,7 +51,7 @@ It is a library that provides easy access to all "HTTP verbs" or "Request Method
     # Or if the request was not successful because the API did not exist
     elif (response.status_code == 404):
       print('Oops, that API could not be found!')
-#### Example 5 - Adding Basic Authentication Header
+#### Example 5 - Adding Basic Authentication Header:
     # This will automatically add a basic authentication header before sending a request
     request.get('https://api.music-catalog.com', auth = ('username','password'))
 #### Example 6 - Adding API Key/Token Authentication:
@@ -61,9 +61,16 @@ It is a library that provides easy access to all "HTTP verbs" or "Request Method
 ##### 6.2 Using the "Bearer" autherization header (preferable):
     headers =  {'Authorization': 'Bearer faaa1c97bd3f4bd9b024c708c979feca'}
     request.get('https://api.music-catalog.com', headers = headers)
+#### Example 7 - Encoding and Decoding JSON text:
+![image](https://github.com/Sir-Elite/My-Summaries/assets/66035383/7b958385-2038-454c-bb7b-3f3a62bc7ea0)
 
+    import json
+    album = {'id': 42, 'title': 'Back in Black'}
+    string = json.dumps(album)        # Encodes a Python object to a JSON string
+    album = json.loads(string)        # Decodes a JSON string to a Python Object
 
 ### Notes:
 * `params` in the `get` method is optional.
 * `data` in the `post` and the `push` methods is the data passed to the query itself, which is necessary in these cases.
 * Each request method accepts an optional `headers` parameter, which is a dictionary for headers data.
+* We can encode and decode `JSON` formatted text into `Python`.
