Requesting JSON data Example

--- a/APIs for Beginners/4. Making API Requests with Python.md
+++ b/APIs for Beginners/4. Making API Requests with Python.md
@@ -68,6 +68,16 @@ It is a library that provides easy access to all "HTTP verbs" or "Request Method
     album = {'id': 42, 'title': 'Back in Black'}
     string = json.dumps(album)        # Encodes a Python object to a JSON string
     album = json.loads(string)        # Decodes a JSON string to a Python Object
+#### Example 8 - Requesting JSON data:
+    # GET request with an accept header
+    response = request.get('https://api.music-catalog.com', headers = {'accept': 'application/json'})
+
+    # Print the json text
+    print(response.text)
+
+    # Decode into Python Object
+    data = response.json()
+    print(data['artist'])
 
 ### Notes:
 * `params` in the `get` method is optional.
