--- a/APIs for Beginners/4. Making API Requests with Python.md
+++ b/APIs for Beginners/4. Making API Requests with Python.md
@@ -37,12 +37,15 @@ It is a library that provides easy access to all "HTTP verbs" or "Request Method
     query_params = {'floor':77, 'elevator':True}
     response1 = request.get('https://350.5th-ave.com/unit/243', params = query_params)
     url = response1.url
+    
 #### Example 2 - POST Request:
     response2 = request.post('https://350.5th-ave.com/unit/243', data = {"Key": "value"}, headers={"Key": "value"})
     response2.headers['content-type']
+    
 #### Example 3 - PUSH Request:
     response3 = request.push('https://350.5th-ave.com/unit/243', data = {"Key": "value"}, headers={"Key": "value"})
     response3.headers.get('content-type')
+    
 #### Example 4 - Check on response status code:
     # Check if the response.status_code is equal to the requests.codes value for "200 OK"
     if response.status_code == requests.codes.ok:
@@ -51,9 +54,11 @@ It is a library that provides easy access to all "HTTP verbs" or "Request Method
     # Or if the request was not successful because the API did not exist
     elif (response.status_code == 404):
       print('Oops, that API could not be found!')
+      
 #### Example 5 - Adding Basic Authentication Header:
     # This will automatically add a basic authentication header before sending a request
     request.get('https://api.music-catalog.com', auth = ('username','password'))
+    
 #### Example 6 - Adding API Key/Token Authentication:
 ##### 6.1 Using a query parameter:
     params = {'access_token': 'faaa1c97bd3f4bd9b024c708c979feca'}
@@ -61,6 +66,7 @@ It is a library that provides easy access to all "HTTP verbs" or "Request Method
 ##### 6.2 Using the "Bearer" autherization header (preferable):
     headers =  {'Authorization': 'Bearer faaa1c97bd3f4bd9b024c708c979feca'}
     request.get('https://api.music-catalog.com', headers = headers)
+    
 #### Example 7 - Encoding and Decoding JSON text:
 ![image](https://github.com/Sir-Elite/My-Summaries/assets/66035383/7b958385-2038-454c-bb7b-3f3a62bc7ea0)
 
@@ -68,6 +74,7 @@ It is a library that provides easy access to all "HTTP verbs" or "Request Method
     album = {'id': 42, 'title': 'Back in Black'}
     string = json.dumps(album)        # Encodes a Python object to a JSON string
     album = json.loads(string)        # Decodes a JSON string to a Python Object
+    
 #### Example 8 - Requesting JSON data:
     # GET request with an accept header
     response = request.get('https://api.music-catalog.com', headers = {'accept': 'application/json'})
@@ -78,6 +85,19 @@ It is a library that provides easy access to all "HTTP verbs" or "Request Method
     # Decode into Python Object
     data = response.json()
     print(data['artist'])
+    
+#### Example 9 - Sending JSON data:
+    import requests
+    playlist = {"name": "Road Trip", 'genre': 'rock', 'private': 'true'}
+
+    # Adding the playlist via the 'json' argument
+    response = requests.post('https://api.music-catalog.com/playlists', json = playlist)
+
+    # Get the request object
+    request = response.request
+
+    # Print the request content-type header
+    print(request.header['content-type'])
 
 ### Notes:
 * `params` in the `get` method is optional.
