--- a/APIs for Beginners/4. Making API Requests with Python.md
+++ b/APIs for Beginners/4. Making API Requests with Python.md
@@ -77,7 +77,7 @@ It is a library that provides easy access to all "HTTP verbs" or "Request Method
     
 #### Example 8 - Requesting JSON data:
     # GET request with an accept header
-    response = request.get('https://api.music-catalog.com', headers = {'accept': 'application/json'})
+    response = request.get('https://api.music-catalog.com', headers = {'Accept': 'application/json'})
 
     # Print the json text
     print(response.text)
