Error Codes Comparison

--- a/APIs for Beginners/4. Making API Requests with Python.md
+++ b/APIs for Beginners/4. Making API Requests with Python.md
@@ -104,3 +104,10 @@ It is a library that provides easy access to all "HTTP verbs" or "Request Method
 * `data` in the `post` and the `push` methods is the data passed to the query itself, which is necessary in these cases.
 * Each request method accepts an optional `headers` parameter, which is a dictionary for headers data.
 * We can encode and decode `JSON` formatted text into `Python`.
+* Status Codes in the `4XX` or in the `5XX` need to be handled.
+
+| Comparison Point | `4XX` - Client Errors                           | `5XX` - Server Error                                                            |
+| ---------------- | ----------------------------------------------- | ------------------------------------------------------------------------------- |
+| Definition       | Issues on the client's end                      | Arises from problems on the server                                              |
+| Common Causes    | Bad requests, authentication failures, ... etc. | Server overloaded, server configuration errors, internal errors, ... etc.       |
+| Resolution       | Fix the request                                 | Should be fixed by the API adminstrator, or aniticipated and addressed in the code by clients to prevent unexpected behavior or bugs. |
