Code Summaries Screenshots added

--- a/APIs for Beginners/4. Making API Requests with Python.md
+++ b/APIs for Beginners/4. Making API Requests with Python.md
@@ -32,6 +32,10 @@ they are two well-known Python libraries for integrating web APIs, such that:
 ## Requests Library:
 It is a library that provides easy access to all "HTTP verbs" or "Request Methods".
 
+![image](https://github.com/Sir-Elite/My-Summaries/assets/66035383/486d76b0-41d1-4238-8762-9c7b44308cf3)
+![image](https://github.com/Sir-Elite/My-Summaries/assets/66035383/c46e4e8f-eebe-4f2c-b8b0-616761e99e21)
+
+
 ### Requests examples:
 #### Example 1 - GET Request:
     query_params = {'floor':77, 'elevator':True}
@@ -99,12 +103,54 @@ It is a library that provides easy access to all "HTTP verbs" or "Request Method
     # Print the request content-type header
     print(request.header['content-type'])
 
+#### Example 10 - Handling API Erros:
+    import requests
+
+    url = ''https://api.music-catalog.com/albums'
+
+    r = requests.get(url)
+    if r.status_code >= 400:
+        # Oops, something went wrong
+    else:
+        # All fine, let's do something with the response
+
+#### Example 11 - Handling Connection Errors:
+    import requests
+    from requests.exceptions import ConnectionError
+    url = ''
+
+    try:
+        r = request.get(url)
+        print(r.status_code)
+    except ConnectionError as conn_err:
+        print(f'Connection Error! {conn_err}.')
+        print(error)
+
+#### Example 12 - raise_for_status():
+    import requests
+    # 1: Import the expections from library requests
+    from requests.exceptions import ConnectionError, HTTPError
+
+    try:
+        r = requests.get('https://api.music-catalog.com/albums')
+
+        # 2: Enable raising exceptions for returned error statuscodes
+        r.raise_for_status()
+
+        print(r.status_code)
+
+    # Intercept the error 
+    # 3: Catch any HTTP Error
+    except HTTPError as http_err:
+        print(f'HTTP error occurred: {http_err}')
+
 ### Notes:
 * `params` in the `get` method is optional.
 * `data` in the `post` and the `push` methods is the data passed to the query itself, which is necessary in these cases.
 * Each request method accepts an optional `headers` parameter, which is a dictionary for headers data.
 * We can encode and decode `JSON` formatted text into `Python`.
 * Status Codes in the `4XX` or in the `5XX` need to be handled.
+* `Connection Error` can occur, due to misspelled URL or absence of internet connection.
 
 | Comparison Point | `4XX` - Client Errors                           | `5XX` - Server Error                                                            |
 | ---------------- | ----------------------------------------------- | ------------------------------------------------------------------------------- |
