What Can JavaScript Do?

--- a/JavaScript/1. Introduction to JavaScript.md
+++ b/JavaScript/1. Introduction to JavaScript.md
@@ -1,1 +1,8 @@
-JavaScript is a scripting (working on the server side - backend) and programming (working on the client side - frontend) language. It help in implementing complex features on a web page by making it interactive.
+`JavaScript` is a scripting (working on the server side - backend) and programming (working on the client side - frontend) language. It help in implementing complex features on a web page by making it interactive. `JavaScript` can:
+1. Dynamically Update Content
+2. Manipulating `HTML` and `CSS`
+3. Animate Images, Content, and Create Image Gallery
+4. Manipulate and Validate Data
+5. Control Multimedia (Audio, Video, ... etc.)
+6. Create Web Browser Games
+7. Create Mobile Applications
