--- a/Flask/1. Introduction to Flask.md
+++ b/Flask/1. Introduction to Flask.md
@@ -4,3 +4,60 @@ There are different backend frameworks in Python like:
 * Bottle
 * Cherry pie
 * Pyramid
+
+#### As a simple example of a Flask program:
+    from flask import Flask
+    
+    app = Flask(__name__)
+
+    @app.route("/")
+    def hello_world():
+      return "Hello, World!"
+
+if we save it in a file called `hello.py`, we can run it using `flask --app hello run`. In the terminal, the response comes with a local browser link to the created website.
+##### OR we can write it as:
+    from flask import Flask
+    
+    app = Flask(__name__)            # "__name__" : The name of the class, function, method or discriptor is being run
+
+    @app.route("/")                  # "/" as the route goes to the home page of a website
+    def hello_world():
+        return "Hello, World!"
+
+    if __name__ == "__main__":      # If we are running the code from this current exact file
+    # "__main__" : We are executing the script of a particular local module not imported module as a script or from an interactive prompt
+    
+        app.run(debug=True)
+
+,and run it directly from the IDE.
+
+
+### Decorator Function 
+    def decorator_function (function)
+      def wrapper_function:
+        function()
+      return wrapper_function
+
+#### Example:
+    import time
+    
+    def delay_decorator (function)
+      def wrapper_function:
+        time.sleep(2)
+        function()
+      return wrapper function
+
+    @delay_decorator
+    def say_hello():
+      print("Hello!")
+
+    def say_greeting():
+      print("How are you?")
+
+    @delay_decorator
+    def say_bye():
+      print("Bye!")
+
+    say_hello()                    # Gets delayed by 2 seconds
+    say_greeting()                 # No Delay
+    say_bye()                      # Gets delayed by 2 seconds
