Introduction to Flask.md

--- a/Flask/1. Introduction to Flask.md
+++ b/Flask/1. Introduction to Flask.md
@@ -37,26 +37,80 @@ if we save it in a file called `hello.py`, we can run it using `flask --app hell
             function()
         return wrapper_function
 
-#### Example:
-    import time
-    
-    def delay_decorator (function)
-        def wrapper_function:
-            time.sleep(2)
-            function()
-        return wrapper function
+#### Example 1:
+    from flask import Flask
 
-    @delay_decorator
-    def say_hello():
-        print("Hello!")
+    app = Flask(__name__)
 
-    def say_greeting():
-        print("How are you?")
 
+    def make_bold(function):
+        def wrapper(*args, **kwargs):
+            return '<b>' + function("Ahmed") + '</b>'
+
+        return wrapper
+
+
+    def make_emphasis(function):
+        def wrapper(*args, **kwargs):
+            return '<em>' + function("Ahmed") + '</em>'
+
+        return wrapper
+
+
+    def make_underlined(function):
+        def wrapper(*args, **kwargs):
+            return '<u>' + function("Ahmed") + '</u>'
+
+        return wrapper
+
+
+    @app.route("/")
+    def hello_world():
+        return "<h1 style='text-align: center'> Hello, World! </h1>" \
+               "<p> This is my first Flask server! </p>" \
+               "<img src='https://i.giphy.com/media/v1.Y2lkPTc5MGI3NjExMjJnYzFxNnN4a3ZmZmV3aDRrNGhuZzg4Mjg5bG55MWJkajYwdGdleiZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/B3aYrt2MEFjhsWOuNg/giphy.gif' width=500>"
+
+
+    @app.route("/name")  # Takes the name variable from the URL
+    @make_bold
+    @make_emphasis
+    @make_underlined
+    def greet1(name):
+        return f"Hello there {name}!"
+
+
+    @app.route("/username/<path:name>/<int:age>")  # Takes the name variable as a path and age variable as an integer from the URL
+    def greet2(name, age):
+        return f"Hello there {name}. You are {age} years old.!"
+
+
+    @app.route("/bye")
     def say_bye():
-        print("Bye!")
+        return "<u><em><b>Bye!</b></em></u>"
 
-    say_hello()                                                        # Gets delayed by 2 seconds
-    say_greeting()                                                     # No Delay
-    decorate_function = delay_decorator(say_bye)
-    decorated_function()                                               # Gets delayed by 2 seconds
+
+    if __name__ == "__main__":
+        app.run(debug=True)
+
+#### Example 2:
+    class User:
+        def __init__(self, name):
+            self.name = name
+            self.is_logged_in = False
+
+
+    def create_blog_post(user):
+        print(f"This is {user.name}'s blog post.")
+
+
+    def is_authenticated_decorator(function):
+        def wrapper(*args, **kwargs):
+            if args[0].is_logged_in == True:
+            function(args[0])
+
+        return wrapper
+
+
+    new_user = User("Ahmed")
+    new_user.is_logged_in = True
+    create_blog_post(new_user)
