Paragraph and Horizontal Rule

--- a/HTML/1. Introduction to HTML.md
+++ b/HTML/1. Introduction to HTML.md
@@ -1,6 +1,6 @@
 Frontend developers use HTML, CSS, JavaScript, ... etc. HTML is the only language that can build a whole website alone; without the help of any other language.
 
-HTML stands for HyperText Markup Language.
+HTML stands for HyperText Markup Language. It is well documented in [Mozilla Development Network (MDN) Web Docs](https://developer.mozilla.org/en-US/docs/Web/HTML).
 
 ### Heading Elements (h1 --> h6):
     <h1> Heading1 </h1>
@@ -10,4 +10,11 @@ HTML stands for HyperText Markup Language.
     <h5> Heading5 </h5>
     <h6> Heading6 </h6>
 
-This what a heading element looks like; with openning `<h>`, closing `</h1>` tags, and content `"Heading1"`.
+This what a heading element looks like; with openning `<h>`, closing `</h1>` tags, and content `"Heading1"`. The have different font sizes with `h1` is the biggest and `h6` is the smallest.
+
+### The Paragraph Element:
+    <p> This is a paragraph. </p>
+
+### Horizontal Rule Element (Self-Closing Element):
+    <hr />
+This prints a horizontal separating line.
