--- a/HTML/1. Introduction to HTML.md
+++ b/HTML/1. Introduction to HTML.md
@@ -15,6 +15,20 @@ This what a heading element looks like; with openning `<h>`, closing `</h1>` tag
 ### The Paragraph Element:
     <p> This is a paragraph. </p>
 
-### Horizontal Rule Element (Self-Closing Element):
+### Void Elements (Self Closing Tags)
+#### 1. Horizontal Rule Element:
     <hr />
 This prints a horizontal separating line.
+
+#### 2. Break Element:
+    <h1> Auguries of Innocence Poem</h1>
+    <h2> BY WILLIAM BLAKE </h2>
+    <hr />
+    <p>
+    To see a World in a Grain of Sand    <br />
+    And a Heaven in a Wild Flower     <br />
+    Hold Infinity in the palm of your hand     <br />
+    And Eternity in an hour    <br />
+    A Robin Red breast in a Cage
+    </p>
+Insert break lines within a paragraph or outside it. It was used in this example to separate the lines of a poem.
