--- a/HTML/1. Introduction to HTML.md
+++ b/HTML/1. Introduction to HTML.md
@@ -12,6 +12,9 @@ HTML stands for HyperText Markup Language. It is well documented in [Mozilla Dev
 
 This what a heading element looks like; with openning `<h>`, closing `</h1>` tags, and content `"Heading1"`. The have different font sizes with `h1` is the biggest and `h6` is the smallest.
 
+![image](https://github.com/user-attachments/assets/407fb063-094d-461b-a06a-5533341a3c78)
+
+
 ### The Paragraph Element:
     <p> This is a paragraph. </p>
 
@@ -32,3 +35,22 @@ This prints a horizontal separating line.
     A Robin Red breast in a Cage
     </p>
 Insert break lines within a paragraph or outside it. It was used in this example to separate the lines of a poem.
+
+### Divisions
+    <body>
+      <h1>The Brown Bear</h1>
+      <div>
+        <h2>About Brown Bears</h2>
+          <h3>Species</h3>
+          <h3>Features</h3>
+      </div>
+      <div>
+        <h2>Habitat</h2>
+          <h3>Countries with Large Brown Bear Populations</h3>
+          <h3>Countries with Small Brown Bear Populations</h3>
+      </div>
+      <div>
+        <h2>Media</h2>
+      </div>
+    </body>
+It is used to divide the elements and put them into different divisions (containers).
