--- a/HTML/1. Introduction to HTML.md
+++ b/HTML/1. Introduction to HTML.md
@@ -14,9 +14,19 @@ This what a heading element looks like; with openning `<h>`, closing `</h1>` tag
 
 ![image](https://github.com/user-attachments/assets/407fb063-094d-461b-a06a-5533341a3c78)
 
-
-### The Paragraph Element:
-    <p> This is a paragraph. </p>
+### Displaying Text
+    <div>
+      <h1>Technology</h1>
+    </div>
+    <div>
+      <p><span>Self-driving cars</span> are anticipated to replace up to 2 million jobs over the next two decades.</p>
+    </div>
+    
+If you want to display text in HTML, you can use a paragraph or span:
+#### 1. The Paragraph Element:
+Paragraphs `<p>` contain a block of plain text.
+#### 2. Span Element:
+<span> contains short pieces of text or other HTML. They are used to separate small pieces of content that are on the same line as other content.
 
 ### Void Elements (Self Closing Tags)
 #### 1. Horizontal Rule Element:
@@ -34,7 +44,7 @@ This prints a horizontal separating line.
     And Eternity in an hour    <br />
     A Robin Red breast in a Cage
     </p>
-Insert break lines within a paragraph or outside it. It was used in this example to separate the lines of a poem.
+Insert break lines within a paragraph or outside it. It was used in this example to separate the lines of a poem. It can be used as either `<br />` or `<br>`.
 
 ### Divisions
     <body>
@@ -54,3 +64,29 @@ Insert break lines within a paragraph or outside it. It was used in this example
       </div>
     </body>
 It is used to divide the elements and put them into different divisions (containers).
+
+### Attributes
+Attributes are made up of the following two parts:
+* The name of the attribute
+* The value of the attribute
+#### 1. Id:
+    <div id="intro">
+      <h1>Introduction</h1>
+    </div>
+ We can use the id attribute to specify different content (such as <div>s) and is really helpful when you use an element more than once. 
+
+### Text Styling:
+    <p>
+        <strong>The Nile River</strong> is the <em>longest</em> river in the world, measuring over 6,850 kilometers long (approximately 4,260 miles).
+    </p>
+Browsers have built-in style sheets that will generally style these tags in the following ways:
+* The `<em>` tag will generally render as italic emphasis.
+* The `<strong>` will generally render as bold emphasis.
+
+### Unordered List:
+    <ul>
+      <li>Limes</li>
+      <li>Tortillas</li>
+      <li>Chicken</li>
+    </ul>
+We need the unordered list tag `<ul>`, and the individual list item tag `<li>`.
