--- a/HTML/1. Introduction to HTML.md
+++ b/HTML/1. Introduction to HTML.md
@@ -46,6 +46,23 @@ This prints a horizontal separating line.
     </p>
 Insert break lines within a paragraph or outside it. It was used in this example to separate the lines of a poem. It can be used as either `<br />` or `<br>`.
 
+#### 3. Image Element:
+    <img src="image-location.jpg" />
+The `<img>` tag has a required attribute called `src`. The src attribute must be set to the image’s source, or the location of the image; which can be a uniform resource locator (URL) of the image. A URL is the web address or local address where a file is stored.
+
+##### Image Alternative Text:
+    <img src="#" alt="A field of yellow sunflowers" />
+The `alt` attribute also serves the following purposes:
+* If an image fails to load on a web page, a user can mouse over the area originally intended for the image and read a brief description of the image. This is made possible by the description you provide in the `alt` attribute.
+* Visually impaired users often browse the web with the aid of screen reading software. When you include the `alt` attribute, the screen reading software can read the image’s description out loud to the visually impaired user.
+* The `alt` attribute also plays a role in Search Engine Optimization (SEO), because search engines cannot “see” the images on websites as they crawl the internet. Having descriptive `alt` attributes can improve the ranking of your site.
+
+### Videos
+    <video src="myVideo.mp4" width="320" height="240" controls>
+      Video not supported
+    </video>
+The `width` and `height` attributes are used to set the size of the video displayed in the browser. The `controls` attribute instructs the browser to include basic video controls such as pausing and playing. The text, Video not supported, between the opening and closing video tags will only be displayed if the browser is unable to load the video.
+
 ### Divisions
     <body>
       <h1>The Brown Bear</h1>
@@ -83,10 +100,20 @@ Browsers have built-in style sheets that will generally style these tags in the 
 * The `<em>` tag will generally render as italic emphasis.
 * The `<strong>` will generally render as bold emphasis.
 
-### Unordered List:
+### Lists
+#### 1. Unordered List:
     <ul>
       <li>Limes</li>
       <li>Tortillas</li>
       <li>Chicken</li>
     </ul>
-We need the unordered list tag `<ul>`, and the individual list item tag `<li>`.
+We need the unordered list tag `<ul>`, and the individual list item tag `<li>`. Unordered list is a bullet list.
+
+#### 2. Ordered List:
+    <ol>
+      <li>Preheat the oven to 350 degrees.</li>
+      <li>Mix whole wheat flour, baking soda, and salt.</li>
+      <li>Cream the butter, sugar in separate bowl.</li>
+      <li>Add eggs and vanilla extract to bowl.</li>
+        </ol>
+Ordered lists `<ol>` are like unordered lists, except that each list item is numbered.
