Doctype and html

--- a/HTML/2. HTML Document Standards.md
+++ b/HTML/2. HTML Document Standards.md
@@ -1,1 +1,10 @@
+### Document Type Declaration
+    <!DOCTYPE html>
+This declaration is an instruction that refers to `HTML5`, and it must be the first line of code in your HTML document. It tells the browser what type of document to expect, along with what version of HTML is being used in the document.
 
+### HTML Tag
+    <!DOCTYPE html>
+    <html>
+      
+    </html>
+The `<!DOCTYPE html>` declaration doesn’t actually add any HTML structure or content. To create HTML structure and content, we must add opening and closing `<html>` tags after declaring `<!DOCTYPE html>`.
