--- a/HTML/2. HTML Document Standards.md
+++ b/HTML/2. HTML Document Standards.md
@@ -8,3 +8,53 @@ This declaration is an instruction that refers to `HTML5`, and it must be the fi
       
     </html>
 The `<!DOCTYPE html>` declaration doesn’t actually add any HTML structure or content. To create HTML structure and content, we must add opening and closing `<html>` tags after declaring `<!DOCTYPE html>`.
+
+### The Head
+The `<head>` element is part of this HTML metaphor. It goes above our `<body>` element. The `<head>` element contains the metadata for a web page. Metadata is information about the page that isn’t displayed directly on the web page. Unlike the information inside of the <body> tag, the metadata in the head is information about the page itself.
+
+### Page Title
+    <!DOCTYPE html>
+    <html>
+      <head>
+        <title>My Coding Journal</title>
+      </head>
+    </html>
+A browser’s tab displays the title specified in the `<title>` tag.
+
+![image](https://github.com/user-attachments/assets/293ad122-c49f-4283-8045-1914c8a1c763)
+
+### Linking to Other Web Pages
+    <a>This Is A Link To Wikipedia</a>
+You can add links to a web page by adding an anchor element `<a>` and including the text of the link in between the opening and closing tags. HTML allows you to turn nearly any element into a link by wrapping that element with an anchor element.
+
+#### Href Attribute
+    <a href="https://www.wikipedia.org/">This Is A Link To Wikipedia</a>
+The anchor element is incomplete without the `href` attribute. This attribute stands for "**hypertext reference**" and is used to link to a path, or the address to where a file is located (whether it is on your computer or another location). The paths provided to the href attribute are often URLs.
+
+#### Target Attribute
+    <a href="https://en.wikipedia.org/wiki/Brown_bear" target="_blank">The Brown Bear</a>
+The `target` attribute specifies how a link should open. It’s possible that one or more links on your web page link to an entirely different website. In that case, you may want users to read the linked website, but hope that they return to your web page. This is exactly when the `target` attribute is useful!
+
+For a link to open in a new window, the `target` attribute requires a value of `_blank`.
+
+#### Image as Link
+    <a href="https://en.wikipedia.org/wiki/Opuntia" target="_blank">
+        <img src="https://www.Prickly_Pear_Closeup.jpg" alt="A red prickly pear fruit"/>
+    </a>
+#### Jumping onto Different Portions of the Same Page
+    <p id="top">This is the top of the page!</p>
+    <h1 id="bottom">This is the bottom! </h1>
+    <ol>
+         <li><a href="#top">Top</a></li>
+         <li><a href="#bottom">Bottom</a></li>
+    </ol>
+When users visit our site, we want them to be able to click a link and have the page automatically scroll to a specific section. In order to link to a target on the same page, we must give the target location on page an id attribute. We use the `#` symbol to link an id value.
+
+### Comments
+    <!-- This is a comment that the browser will not display. -->
+Comments begin with `<!--` and end with `-->`. Including comments in your code is helpful for many reasons:
+1. They help you (and others) understand your code if you decide to come back and review it at a much later date.
+2. They allow you to experiment with new code, without having to delete old code.
+
+### Practical Note
+Whitespaces and Indentations are used to make the HTML document easier to use.
