--- a/HTML/3. HTML Tables.md
+++ b/HTML/3. HTML Tables.md
@@ -1,1 +1,27 @@
+### Table
+    <table border="1">
+      <tr>
+        <th></th>
+        <th scope="col">Saturday</th>
+        <th scope="col">Sunday</th>
+      </tr>
+      <tr>
+        <th scope="row">Temperature</th>
+        <td>73</td>
+        <td>81</td>
+      </tr>
+    </table>
+#### 1. Table Creation
+We use `<table>` to create a table. It has an **optional** `border` attribute to change the border style of the table. Eventhough, We use CSS to add style to HTML documents, because it helps us to separate the structure of a page from how it looks.
+##### You can achieve the same table border effect using CSS.
 
+    table, td {
+      border: 1px solid black;
+    }
+
+#### 2. Table Rows
+We use `<tr>` to define a table rows.
+#### 3. Table Data
+We use `<td>` to enter table data.
+#### 4. Table Heading
+We use `<th>` to enter table heading. It has a `scope` attribute for defining the heading scope, whether on the column or on the row.
