Table Head, Body and Footer

--- a/HTML/3. HTML Tables.md
+++ b/HTML/3. HTML Tables.md
@@ -1,16 +1,33 @@
 ### Table
-    <table border="1">
-      <tr>
-        <th></th>
-        <th scope="col">Saturday</th>
-        <th scope="col">Sunday</th>
-      </tr>
-      <tr>
-        <th scope="row">Temperature</th>
-        <td>73</td>
-        <td>81</td>
-      </tr>
+    <table>
+      <thead>
+        <tr>
+          <th>Quarter</th>
+          <th>Revenue</th>
+          <th>Costs</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <th>Q1</th>
+          <td>$10M</td>
+          <td>$7.5M</td>
+        </tr>
+        <tr>
+          <th>Q2</th>
+          <td>$12M</td>
+          <td>$5M</td>
+        </tr>
+      </tbody>
+      <tfoot>
+        <tr>
+          <th>Total</th>
+          <td>$22M</td>
+          <td>$12.5M</td>
+        </tr>
+      </tfoot>
     </table>
+
 #### 1. Table Creation
 We use `<table>` to create a table. It has an **optional** `border` attribute to change the border style of the table. Eventhough, We use CSS to add style to HTML documents, because it helps us to separate the structure of a page from how it looks.
 ##### You can achieve the same table border effect using CSS.
@@ -22,6 +39,12 @@ We use `<table>` to create a table. It has an **optional** `border` attribute to
 #### 2. Table Rows
 We use `<tr>` to define a table rows.
 #### 3. Table Data
-We use `<td>` to enter table data.
-#### 4. Table Heading
+We use `<td>` to enter table data. Data can span columns using the **optional** `colspan` attribute, and across rows using the **optional** `rowspan` attribute.
+#### 4. Table Body
+Over time, a table can grow to contain a lot of data and become very long. When this happens, the table can be sectioned off so that it is easier to manage. Long tables can be sectioned off using the table body element `<tbody>`.
+#### 5. Table Heading
 We use `<th>` to enter table heading. It has a `scope` attribute for defining the heading scope, whether on the column or on the row.
+#### 6. Table Head
+When a table’s body is sectioned off, however, it also makes sense to section off the table’s column headings using the `<thead>` element.
+#### 7. Table Footer
+The bottom part of a long table can also be sectioned off using the `<tfoot>` element.
