--- a/HTML/4. HTML Forms.md
+++ b/HTML/4. HTML Forms.md
@@ -1,1 +1,12 @@
+### Forms Element
+    <form action="/example.html" method="POST">
+      <h1>Creating a form</h1>
+      <p>Looks like you want to learn how to create an HTML form. Well, the best way to learn is to play around with it.</p>
+    </form>
+Just like a physical form, an HTML `<form>` element is responsible for collecting information to send somewhere else. Every time we browse the internet we come into contact with many forms and we might not even realize it. There’s a good chance that if you’re typing into a text field or providing an input, the field that you’re typing into is part of a `<form>`!
 
+The <form> element can also contain child elements. There are different attributes for the `<form>` element like:
+#### 1. Action Attribute
+The `action` attribute determines where the information is sent.
+#### 2. Method Attribute
+The `method` attribute is assigned a `HTTP` verb that is included in the `HTTP` request.
