--- a/HTML/4. HTML Forms.md
+++ b/HTML/4. HTML Forms.md
@@ -2,6 +2,23 @@
     <form action="/example.html" method="POST">
       <h1>Creating a form</h1>
       <p>Looks like you want to learn how to create an HTML form. Well, the best way to learn is to play around with it.</p>
+      <label for="meal">What do you want to eat?</label>
+      <br>
+      <input type="text" name="food" value="meal">
+      <br>
+      <span>Rare</span>
+      <input type="range" id="doneness" name="doneness" min="0" max="5" step="0.5">
+      <span>Well-Done</span>
+      <label for="pepperoni">Pepperoni</label>
+      <input id="pepperoni" name="topping" type="checkbox" value="pepperoni">
+      <label for="anchovy">Anchovy</label>
+      <input id="anchovy" name="topping" type="checkbox" value="anchovy">
+      <br>
+      <input type="radio" id="two" name="answer" value="2">
+      <label for="two">2</label>
+      <br>
+      <input type="radio" id="eleven" name="answer" value="11">
+      <label for="eleven">11</label>
     </form>
 Just like a physical form, an HTML `<form>` element is responsible for collecting information to send somewhere else. Every time we browse the internet we come into contact with many forms and we might not even realize it. There’s a good chance that if you’re typing into a text field or providing an input, the field that you’re typing into is part of a `<form>`!
 
@@ -10,3 +27,22 @@ The <form> element can also contain child elements. There are different attribut
 The `action` attribute determines where the information is sent.
 #### 2. Method Attribute
 The `method` attribute is assigned a `HTTP` verb that is included in the `HTTP` request.
+
+
+### Text Input Element
+If we want to create an input field in our `<form>`, we’ll need the help of the `<input>` element.
+#### 1. Type Attribute
+When we create an `<input>` element with:
+1. `type="text"`, it renders a text field that users can type into. Note that the **default** value of type is `"text"`. An `<input type ="password">` element will replace input text with another character like an asterisk (`*`) or a dot (`•`).
+2. `type="number"` for an <input> we can restrict what users type into the input field to just numbers (and a few special characters like `-`, `+`, and `.`). We can also provide a `step` attribute which creates arrows inside the input field to increase or decrease by the value of the step attribute.
+3. `type="range"` to set the minimum and maximum values of the slider we assign values to the `min` and `max` attribute of the `<input>`. We could also control how smooth and fluid the slider works by assigning the `step` attribute a value.
+4. `type="checkbox"` if we presented multiple options to users and allowed them to select any number of options.
+5. `type="radio"` if we want to present multiple options and only allow for one selection.
+
+#### 2. Name Attribute
+It’s also important that we include a `name` attribute for the `<input>` — without the name attribute, information in the `<input>` won’t be sent when the `<form>` is submitted.
+#### 3. Value Attribute
+After users type into the `<input>` element, the value of the `value` attribute becomes what is typed into the text field. The value of the value attribute is paired with the value of the `name` attribute and sent as text when the form is submitted.
+
+### Label Element
+For a user to properly identify an `<input>` element or others, we use the appropriately named `<label>` element.
