--- a/HTML/4. HTML Forms.md
+++ b/HTML/4. HTML Forms.md
@@ -19,6 +19,13 @@
       <br>
       <input type="radio" id="eleven" name="answer" value="11">
       <label for="eleven">11</label>
+      <select id="lunch" name="lunch">
+        <option value="pizza">Pizza</option>
+        <option value="curry">Curry</option>
+        <option value="salad">Salad</option>
+        <option value="ramen">Ramen</option>
+        <option value="tacos">Tacos</option>
+      </select>
     </form>
 Just like a physical form, an HTML `<form>` element is responsible for collecting information to send somewhere else. Every time we browse the internet we come into contact with many forms and we might not even realize it. There’s a good chance that if you’re typing into a text field or providing an input, the field that you’re typing into is part of a `<form>`!
 
@@ -46,3 +53,13 @@ After users type into the `<input>` element, the value of the `value` attribute 
 
 ### Label Element
 For a user to properly identify an `<input>` element or others, we use the appropriately named `<label>` element.
+
+### Dropdown List Element
+A dropdown list to allows our users to choose one option from an organized list by using:
+* `<select>` element with `id` and `name` for the list.
+* `<option">` element with `value` attribute for each option in the dropdown list.
+
+### Datalist Element
+While `<select>` and `<datalist>` share some similarities, there are some major differences. In the associated `<input>` element, users can type in the input field to search for a particular option. If none of the `<option>`s match, the user can still use what they typed in. When the form is submitted, the value of the `<input>`‘s name and the value of the `option` selected, or what the user typed in, is sent as a pair.
+
+### Textarea Element
