Submit Form and Textarea Added

--- a/HTML/4. HTML Forms.md
+++ b/HTML/4. HTML Forms.md
@@ -1,4 +1,4 @@
-### Forms Element
+## Forms Element
     <form action="/example.html" method="POST">
       <h1>Creating a form</h1>
       <p>Looks like you want to learn how to create an HTML form. Well, the best way to learn is to play around with it.</p>
@@ -26,6 +26,8 @@
         <option value="ramen">Ramen</option>
         <option value="tacos">Tacos</option>
       </select>
+      <br>
+      <input type="submit" value="Submit">
     </form>
 Just like a physical form, an HTML `<form>` element is responsible for collecting information to send somewhere else. Every time we browse the internet we come into contact with many forms and we might not even realize it. There’s a good chance that if you’re typing into a text field or providing an input, the field that you’re typing into is part of a `<form>`!
 
@@ -45,6 +47,7 @@ When we create an `<input>` element with:
 3. `type="range"` to set the minimum and maximum values of the slider we assign values to the `min` and `max` attribute of the `<input>`. We could also control how smooth and fluid the slider works by assigning the `step` attribute a value.
 4. `type="checkbox"` if we presented multiple options to users and allowed them to select any number of options.
 5. `type="radio"` if we want to present multiple options and only allow for one selection.
+6. `type="submit"` to make a submit button in a `<form>`, we’re going to use the reliable `<input>` element.
 
 #### 2. Name Attribute
 It’s also important that we include a `name` attribute for the `<input>` — without the name attribute, information in the `<input>` won’t be sent when the `<form>` is submitted.
@@ -60,6 +63,26 @@ A dropdown list to allows our users to choose one option from an organized list 
 * `<option">` element with `value` attribute for each option in the dropdown list.
 
 ### Datalist Element
+    <section class="sauce-selection">
+        <label for="sauce">What type of sauce would you like?</label>
+        <input list="sauces" id="sauce" name="sauce">
+        <datalist id="sauces">
+            <option value="ketchup"></option>
+            <option value="mayo"></option>
+            <option value="mustard"></option>
+        </datalist>
+    </section>
 While `<select>` and `<datalist>` share some similarities, there are some major differences. In the associated `<input>` element, users can type in the input field to search for a particular option. If none of the `<option>`s match, the user can still use what they typed in. When the form is submitted, the value of the `<input>`‘s name and the value of the `option` selected, or what the user typed in, is sent as a pair.
 
 ### Textarea Element
+    <form>
+      <label for="blog">New Blog Post: </label>
+      <br>
+      <textarea id="blog" name="blog" rows="5" cols="30">
+      </textarea>
+    </form>
+The `<textarea>` element is used to create a bigger text field for users to write more text. We can add the attributes `rows` and `cols` to determine the amount of rows and columns for the `<textarea>`.
+
+### Submit Form Element
+    <input type="submit" value="Submit">
+To make a submit button in a `<form>`, we’re going to use the reliable `<input>` element and set the `type` to `"submit"`.
